Fix MixedMutabilityReturnType errors.
Fix data values that could throw an UnsupportedOperationException when
trying to sort an immuntable collection. Always return mutable
collections now to allow for sorting.